# test-os-on-orangepi-zero2

./: .gitignore  Cargo.toml  Makefile  README.md
.cargo/: config  linker-h616.ld  linker-qemu.ld  linker.ld
boot/: boot.cmd  orangepiEnv.txt
boot/dtb/allwinner/: juno.dts  sun50i-h616-orangepi-zero2-b.dtb  sun50i-h616-orangepi-zero2-lts.dtb  sun50i-h616-orangepi-zero2.dtb
boot/dtb/allwinner/overlay/: sun50i-h616-fixup.scr  sun50i-h616-i2c1.dtbo  sun50i-h616-i2c2.dtbo  sun50i-h616-i2c3.dtbo  sun50i-h616-i2c4.dtbo  sun50i-h616-pwm12.dtbo  sun50i-h616-pwm34.dtbo  sun50i-h616-spi-spidev.dtbo  sun50i-h616-uart2.dtbo  sun50i-h616-uart5.dtbo
src/: boot.rs  boot.s  console.rs  kalloc.rs  logging.rs  main.rs  panic.rs  rtc.rs  uart.rs
src/uart/: h616.rs  mod.rs  qemu.rs
